<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/action_sort_by_abc"
                    android:checked="true"
                    android:title="@string/action_sort_by_abc"/>
                <item
                    android:id="@+id/action_sort_by_category"
                    android:title="@string/action_sort_by_category"/>
                <item
                    android:id="@+id/action_sort_by_favorite"
                    android:title="@string/action_sort_by_favorite"/>
            </group>
        </menu>
    </item>

</menu>