<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.PopCorp.Purchases.ListsActivity" >

    <item
        android:id="@+id/action_edit_product"
        android:showAsAction="always"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/action_edit_item"/>
    
    <item
        android:id="@+id/action_remove_product"
        android:showAsAction="always"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_remove_item"/>

    <item
        android:id="@+id/action_to_favorite"
        android:showAsAction="always"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/action_to_favorite"/>

    <item
        android:id="@+id/action_remove_from_favorite"
        android:showAsAction="always"
        android:icon="@drawable/ic_star_outline_black_24dp"
        android:title="@string/action_from_favorite"/>
    
</menu>
