<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_list_fields_layout_with_fields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/content_list_fields_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/content_list_fields_edittext_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_name_of_listitem"
                    android:maxLines="1"
                    android:singleLine="true">

                    <requestFocus />
                </AutoCompleteTextView>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/content_list_fields_button_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_for_buttons"
                android:padding="8dp"
                android:src="@drawable/ic_keyboard_voice_grey600_36dp"
                android:layout_marginTop="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="2"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/content_list_fields_count_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_for_buttons"
                    android:padding="8dp"
                    android:src="@drawable/ic_remove_grey600_36dp" />

                <EditText
                    android:id="@+id/content_list_fields_edittext_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/content_count_of_listitem"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/content_list_fields_count_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_for_buttons"
                    android:padding="8dp"
                    android:src="@drawable/ic_add_grey600_36dp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/content_list_fields_spinner_edizm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingRight="8dp">

                <EditText
                    android:id="@+id/content_list_fields_edittext_coast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/content_coast_of_listitem"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <Spinner
                android:id="@+id/content_list_fields_spinner_shop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:weightSum="5">

            <CheckBox
                android:id="@+id/content_list_fields_checkbox_important"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:text="@string/content_important_of_listitem" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="3"
                android:gravity="center_vertical|end">

                <TextView
                    android:id="@+id/content_list_fields_textview_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/string_category" />

                <Spinner
                    android:id="@+id/content_list_fields_spinner_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/content_list_fields_edittext_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_comment_of_listitem"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>