<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_empty_list"
        android:id="@+id/fragment_list_textview_empty"
        android:drawablePadding="16dp"
        android:drawableTop="@drawable/ic_empty_list"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:visibility="gone" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_list_progressbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_list_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:clipToPadding="false"
        android:paddingBottom="64dp"
        android:paddingTop="8dp"
        android:visibility="invisible"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:id="@+id/fragment_list_layout_with_totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/shadow_bottom"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/fragment_list_totals_background"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/primary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_list_textview_total_buyed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_total_buyed"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/fragment_list_textview_total_buyed_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@android:color/white"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_list_textview_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_total"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/fragment_list_textview_total_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <FrameLayout
        android:id="@+id/fragment_list_layout_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_list_layout_with_totals"
        android:layout_marginBottom="-6dp"/>

    <com.software.shell.fab.ActionButton
        android:id="@+id/fragment_list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_list_layout_snackbar"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        fab:image="@drawable/ic_add_white_24dp"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>